# iris-prefect

./: .gitignore  README.md  main-deployment.yaml  process-deployment.yaml  pyproject.toml  train-deployment.yaml
src/: config.py  main.py  process.py  process_without_prefect.py  train_model.py
