[tool.poetry]
name = "iris-prefect"
version = "0.1.0"
description = ""
authors = ["Khuyen Tran"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"
pre-commit = "^2.19.0"
scikit-learn = "^1.2.0"
prefect = "^2.7.3"
pandas = "^1.5.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
